syntax = "proto3";

package proto;

// Roll call description
message RollRequest {
  int32 code = 1;
}