syntax = "proto3";

package proto;

// Single call description
message SingleRequest {
  int32 code = 1;
}